--- a/Resources/views/Admin/block-edit.html.twig
+++ b/Resources/views/Admin/block-edit.html.twig
@@ -13,7 +13,7 @@
             ) }}
 
    <div class="page-title">
-   	<h1>{% trans %}%pageTitle%{% endtrans %}</h1>
+   	<h1>{{pageTitle}}</h1>
    </div>
 
 	<div class="row" id="cmsEditingDD">
@@ -47,8 +47,8 @@
             	{{ form_start(form, { 'attr': {'class': 'form-horizontal', 'id': 'blockForm'} }) }}
 
 					<div class="heading">
-        	    		<i class="icon-save"></i> <em>{% trans %}%pageSubTitle%{% endtrans %}</em>
-        	    		<input type="submit" class="btn btn-success pull-right" value="Save"/>
+        	    		<i class="icon-save"></i> <em>{{pageSubTitle}}</em>
+        	    		<input type="submit" class="btn btn-success pull-right" value="{% trans %}Save{% endtrans %}"/>
         	   	</div>
 					            
             	<div class="widget-content padded">
@@ -64,7 +64,7 @@
               		<div class="row">
 						   <div class="widget-container fluid-height">
       					  	<div class="heading">
-      				 			<i class="icon-picture"></i> Drag attributes from left panel and drop them here
+      				 			<i class="icon-picture"></i> {% trans %}Drag attributes from left panel and drop them here{% endtrans %}
       				 	  	</div>
       				 		<div class="widget-content padded" id="cmsBlockAttributes">
       				 		   <ul class="sortable no-style">
