--- a/Resources/views/Admin/blocks.html.twig
+++ b/Resources/views/Admin/blocks.html.twig
@@ -22,13 +22,13 @@
         	<div class="widget-container fluid-height clearfix">
             	<div class="heading">
               		<i class="icon-archive"></i>{{ pageSubTitle }}
-              		<a href="{{ path('_cms_block_edit') }}" class="btn btn-success-outline pull-right"><i class="icon-plus"></i>Add new</a>
+              		<a href="{{ path('_cms_block_edit') }}" class="btn btn-success-outline pull-right"><i class="icon-plus"></i>{% trans %}Add new{% endtrans %}</a>
             	</div>
             	<div class="widget-content padded clearfix">
               		<table class="table table-bordered table-striped">
                 		<thead>
                   			<th class="check-header hidden-xs"></th>
-                        	<th class="">Title</th>
+                        	<th class="">{% trans %}Title{% endtrans %}</th>
                   			<th></th>
                 		</thead>
                 		<tbody>
