--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -42,9 +42,9 @@
         {% else %}{% set menu = getMenu(host.id, lang, 'main', 2, page.id, 1) %}
         {% endif %}
 
-        {% block teel_header %}
-            {% set ga_tracking = app.session.get('google.analytics') %}
-            {% if ga_tracking is not empty %}
+        {% block teel_gatracking %}
+            {% set ga_tracking = app.session.get('google') %}
+            {% if ga_tracking.analytics is not empty %}
             <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -56,6 +56,9 @@
             
             </script>
             {% endif %}
+        {% endblock %}
+
+        {% block teel_header %}
             {% block main_menu %}{% include ['MajesCmsBundle:Index:parts/menu.html.twig'] %}{% endblock %}
         {% endblock %}
 
