--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -43,15 +43,15 @@
         {% endif %}
 
         {% block teel_gatracking %}
-            {% set ga_tracking = app.session.get('google') %}
-            {% if ga_tracking.analytics is not empty %}
+            {% set google = app.session.get('google') %}
+            {% if google.analytics is not empty %}
             <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', '{{ ga_tracking }}', '{{ app.request.host }}');
+              ga('create', '{{ google.analytics }}', '{{ app.request.host }}');
               ga('send', 'pageview');
             
             </script>
