correction d'un bug d'affichage

--- a/Resources/views/Admin/datatype/form/picture.html.twig
+++ b/Resources/views/Admin/datatype/form/picture.html.twig
@@ -68,7 +68,7 @@
 	<label for="myaccount_is_active" class="control-label col-lg-3">{% trans %}Remove picture{% endtrans %}</label>
 	<div class="col-lg-9">
 		<label class="checkbox">
-			<input type="checkbox" name="attributes[{{attribute.block_attribute_ref}}][remove]" value="1">
+                    <input type="checkbox" name="attributes[{{attribute.block_attribute_ref}}][remove]" value="1"><span></span>
 		</label>
 	</div>
 </div>
